--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ playground.xcworkspace
 # Packages/
 .build/
 
+## macOS
+.DS_Store
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
