Ignore .gitconfig file

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ playground.xcworkspace
 ## macOS
 .DS_Store
 
+## git
+.gitconfig
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
